--- a/addproject.css
+++ b/addproject.css
@@ -192,6 +192,7 @@ a {
 }
 h1 {
     font-family: 'Segoe UI';
+    margin-bottom: 30px;
 }
 .myProject {
     background-color: rgb(255, 255, 255);
@@ -223,6 +224,7 @@ h1 {
     margin-left: 38px;
     justify-content: center;
     cursor: pointer;
+    transition: transform .4s;
     /* background-color: red; */
 }
 .cardProject p {
@@ -230,6 +232,9 @@ h1 {
 }
 .cardProjectLink {
     color: black;
+}
+.cardProject:hover {
+    transform: scale(1.1);
 }
 .iconCard {
     font-size: 30px;
