--- a/myprojectdetail.css
+++ b/myprojectdetail.css
@@ -10,6 +10,10 @@ body {
 nav {
     height: 8vh;
     background-color: white;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: 0.2s;
 }
 nav ul {
     display: flex;
